# apa

./: .gitignore  README.md  a.txt  meson.build  meson_options.txt  vala-lint.conf
data/: defaults  meson.build
hooks/: pre-commit
po/: POTFILES.in  apa.pot  ru.po
src/: apa-get.vala  apa.vala  args-handler.vala  command-args.vala  command-handler.vala  command.vala  config-manager.vala  config.vapi  constants.vala  error-detection.vala  fuzzy-search.vala  help.vala  helps.vala  main.vala  meson.build  moo.vala  origin.vala  progress.vala  search.vala  spawn-command.vala  utils.vala
src/alt/: apt-cache.vala  apt-get.vala
src/apa/: autoremove.vala  do.vala  info.vala  install.vala  kernel.vala  list.vala  moo.vala  reinstall.vala  remove.vala  rpm.vala  search-file.vala  search.vala  source.vala  update.vala  upgrade.vala
src/apa/config/: config-get.vala  config-list.vala  config-reset.vala  config-set.vala  config.vala  get.vala  list.vala  reset.vala  set.vala
src/apa/kernel/: kernel-list.vala  kernel-upgrade.vala  kernel.vala  list.vala  upgrade.vala
src/apa/repo/: add-aides.vala  add.vala  list.vala  remove-aides.vala  remove.vala  repo-add-aides.vala  repo-add.vala  repo-list.vala  repo-remove-aides.vala  repo-remove.vala  repo.vala
src/apa/task/: add.vala  install.vala  list.vala  search.vala  show.vala  task-add.vala  task-install.vala  task-list-packages.vala  task-list.vala  task-search.vala  task-show.vala  task.vala
src/apa/update/: update.vala
src/apt/: apt-cache.vala  apt-get.vala  apt-repo.vala  cache.vala  get.vala  repo.vala
src/cachier/: cachier.vala  package-list.vala  package.vala  rpm-evr.vala
src/data/: cache-data.vala  commands-data.vala  config-data.vala  descriptions.vala  get-data.vala  list-data.vala  repo-data.vala  rpm-data.vala  search-data.vala  search-file-data.vala  task-data.vala  update-kernel-data.vala
src/entities/: arg-option.vala  command-entity.vala  config-entity.vala  option-entity.vala
src/flatpak/: flatpak.vala
src/options-data/: cache-data.vala  get-data.vala  repo-data.vala  task-search-data.vala  update-kernel-data.vala
src/rpm/: rpm.vala
src/snap/: snap.vala
src/utils-commands/: rpm.vala  update-kernel.vala
subprojects/: libalt-repo.wrap  libapi-base.wrap  libvazzy.wrap
test/: fuzzy-search-test.vala  meson.build  utils-test.vala
tests/: meson.build  options-test.vala
vapi/: meson.build  rpmvercmp.vapi
